Fixes #630: ND panel inside CRF header should be always visible if there are NDs. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@660 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -1973,7 +1973,7 @@ div#sumBox table tr:first-child td { border-top-width: 0px;
 .taskLink { padding: 3px 10px 4px 10px; font-weight: bold; }
 
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 #loginBox { width: 310px; }
